$Id: History,v 1.20 2002-01-10 16:27:42 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Sub-Category History file
                      -------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

10-Jan-2002, G.Cosmo (geom-solids-specific-V04-00-00)
- Updated unit tests.

20-Apr-2001, G.Cosmo (geom-solids-specific-V03-01-00)
- Migration to STL vector:
  o In G4ClippablePolygon, migrated G4ThreeVectorList typedef and
    made private to class.
    
03-Apr-2001, D.Williams  (geom-solids-specific-V03-00-01)
-----------------------
- G4IntersectingCone.cc: make small adjustment to help with roundoff error
  in LineHitsCone1() and LineHitsCone2().

08-Jan-2001, D.Williams  (geom-solids-specific-V03-00-00)
-----------------------
- G4Hype.cc: Added protecton against zero v.z in DistanceToOut.

20-Nov-2000, G.Cosmo     (geom-solids-specific-V02-00-04)
---------------------
- Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
  o commented out variables declared and not used.
  o fixed declaration of variables used before being initialised.
  o fixed order of initialisation of member data in constructors.
  o fixed usage of unsigned-int (size_t) for array indeces.

13-Nov-2000, G.Cosmo     (geom-solids-specific-V02-00-03)
--------------------